# transformer-pipelines

./: API.md  README.md  index.ts  package-lock.json  package.json
python-src/: README.md  main.py  pyproject.toml
python-src/models/: types.py
python-src/routes/: __init__.py  code_completion.py  image_classification.py  image_to_text.py  masked_language_modeling.py  object_detection.py  ocr.py  question_answering.py  sentiment_analysis.py  summarization.py  text_generation.py  token_classification.py  translation.py  zero_shot_classification.py
python-src/utils/: pipeline_factory.py
src/: server.ts
src/middleware/: errorHandler.ts  requestLogger.ts
src/routes/: codeCompletion.ts  imageClassification.ts  imageToText.ts  maskedLanguageModeling.ts  objectDetection.ts  ocr.ts  questionAnswering.ts  sentimentAnalysis.ts  summarization.ts  textGeneration.ts  tokenClassification.ts  translation.ts  zeroShotClassification.ts
src/types/: index.ts
src/utils/: pipelineFactory.ts
